alignment and fixes?

--- a/src/style.css
+++ b/src/style.css
@@ -143,10 +143,10 @@ div.split-container>div>div:nth-child(4) {
   --fb-logo-background: url("../src/assets/Facebook_Logo_Secondary.png");
   --instagram-logo-background: url("../src/assets/Instagram_Glyph_White.png");
   --settings-text: rgba(255, 255, 255, 1);
-  --map-layers-icon: url("../src/assets/layer_white.svg");
-  --close-layers-icon: url("../src/assets/close_white.svg");
-  --expand-layers-icon: url("../src/assets/arrow_collapsed_menu_white.svg");
-  --collapse-layers-icon: url("../src/assets/arrow_expanded_menu_white.svg");
+  --map-layers-icon: url("https://data.dh.gu.se/ui-icons/layer_white.svg");
+  --close-layers-icon: url("https://data.dh.gu.se/ui-icons/close_white.svg");
+  --expand-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_collapsed_menu_white.svg");
+  --collapse-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_expanded_menu_white.svg");
 }
 
 html[style-theme='dark'] {
@@ -230,10 +230,10 @@ html[style-theme='dark'] {
   --fb-logo-background: url("../src/assets/Facebook_Logo_Secondary.png");
   --instagram-logo-background: url("../src/assets/Instagram_Glyph_White.png");
   --settings-text: rgba(255, 255, 255, 1);
-  --map-layers-icon: url("../src/assets/layer_white.svg");
-  --close-layers-icon: url("../src/assets/close_white.svg");
-  --expand-layers-icon: url("../src/assets/arrow_collapsed_menu_white.svg");
-  --collapse-layers-icon: url("../src/assets/arrow_expanded_menu_white.svg");
+  --map-layers-icon: url("https://data.dh.gu.se/ui-icons/layer_white.svg");
+  --close-layers-icon: url("https://data.dh.gu.se/ui-icons/close_white.svg");
+  --expand-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_collapsed_menu_white.svg");
+  --collapse-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_expanded_menu_white.svg");
 }
 
 html[style-theme='light'] {
@@ -317,10 +317,10 @@ html[style-theme='light'] {
   --fb-logo-background: url("../src/assets/Facebook_Logo_Primary.png");
   --instagram-logo-background: url("../src/assets/Instagram_Glyph_Black.png");
   --settings-text: rgba(0, 0, 0, 1);
-  --map-layers-icon: url("../src/assets/layer_white.svg");
-  --close-layers-icon: url("../src/assets/close_white.svg");
-  --expand-layers-icon: url("../src/assets/arrow_collapsed_menu_white.svg");
-  --collapse-layers-icon: url("../src/assets/arrow_expanded_menu_white.svg");
+  --map-layers-icon: url("https://data.dh.gu.se/ui-icons/layer_white.svg");
+  --close-layers-icon: url("https://data.dh.gu.se/ui-icons/close_white.svg");
+  --expand-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_collapsed_menu_white.svg");
+  --collapse-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_expanded_menu_white.svg");
 }
 
 @media (prefers-contrast:more) or (prefers-reduced-transparency) {
@@ -404,9 +404,9 @@ html[style-theme='light'] {
     --fb-logo-background: url("../src/assets/Facebook_Logo_Primary.png");
     --instagram-logo-background: url("../src/assets/Instagram_Glyph_Black.png");
     --settings-text: rgba(0, 0, 0, 1);
-   --map-layers-icon: url("../src/assets/layer_white.svg");
-  --close-layers-icon: url("../src/assets/close_white.svg");
-  --expand-layers-icon: url("../src/assets/arrow_collapsed_menu_white.svg");
-  --collapse-layers-icon: url("../src/assets/arrow_expanded_menu_white.svg");
+  --map-layers-icon: url("https://data.dh.gu.se/ui-icons/layer_white.svg");
+  --close-layers-icon: url("https://data.dh.gu.se/ui-icons/close_white.svg");
+  --expand-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_collapsed_menu_white.svg");
+  --collapse-layers-icon: url("https://data.dh.gu.se/ui-icons/arrow_expanded_menu_white.svg");
   }
 }
